# Fastapi-React

./: .gitignore  README.md  package.json  pyproject.toml
backend/: main.py
backend/crud/: music_crud.py  user_crud.py
backend/database/: database.py
backend/model/: models.py  mymodels.py
react/src/: App.js
react/src/component/: InputTextField.js  Login.js  Message.js  TestTable.js  testMusic.js  testMusicBack.js
